# ccp-iodine-1d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: I-_I+_volume_recombination.txt  I-_I2+_volume_recombination.txt  I2_I+_charge_exchange.txt  I2_I+_scattering.txt  I2_I2+_charge_exchange.txt  I2_I2+_scattering.txt  I2_dissociation.txt  I2_dissociative_attachment.txt  I2_dissociative_ionization.txt  I2_elastic.txt  I2_elastic_momentum.txt  I2_excitation_1.txt  I2_excitation_2.txt  I2_excitation_3.txt  I2_excitation_4.txt  I2_excitation_vibrational.txt  I2_ionization.txt  I_I+_charge_exchange.txt  I_I+_scattering.txt  I_elastic.txt  I_excitation_1.txt  I_excitation_2.txt  I_excitation_total.txt  I_ionization.txt  LICENSE.txt
data/case1/: density_e_1.txt  density_i.txt  density_i2.txt  density_im.txt  electric_field_x_1.txt  electric_field_y_1.txt  grid_info_1.txt  phi_field_1.txt  velocity_i_1.txt
data/case2/: density_e.txt  density_i.txt  density_i2.txt  density_im.txt  electric_field_x.txt  electric_field_y.txt  grid_info.txt  phi_field.txt  velocity_e.txt  velocity_i.txt
data/case3/: density_e.txt  density_i.txt  density_i2.txt  density_im.txt  electric_field_x.txt  electric_field_y.txt  grid_info.txt  phi_field.txt  velocity_e.txt  velocity_i.txt
scripts/: plot_results.py
src/: events.h  main.cpp  parameters.cpp  parameters.h  reactions.cpp  reactions.h  simulation.cpp  simulation.h  simulation_events.cpp  simulation_events.h
